# cpp20_demo

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
modules/: CMakeLists.txt  readme.md
modules/mod0/: main.cpp  square.ixx
modules/mod1/: main.cpp  mod1.ixx  mod1io.ixx  mod1price.ixx
modules/mod2/: main.cpp  mod2.ixx  mod2order.ixx  mod2price.ixx
